Refatoração em serviços de mapas e testes