@@ -8,6 +8,14 @@ import sgc.mapa.model.*;
 
 import java.util.*;
 
+/**
+ * Serviço especializado para realizar cópias profundas de mapas de competências.
+ *
+ * <p>Responsável por duplicar toda a estrutura hierárquica de um mapa:
+ * competências, atividades e conhecimentos, mantendo as associações entre eles.
+ *
+ * <p>Essencial para iniciar novos ciclos de revisão baseados em mapas anteriores.
+ */
 @Service
 @RequiredArgsConstructor
 public class CopiaMapaService {
@@ -16,69 +24,132 @@ public class CopiaMapaService {
     private final ConhecimentoRepo conhecimentoRepo;
     private final CompetenciaRepo competenciaRepo;
 
+    /**
+     * Cria uma cópia profunda de um mapa existente.
+     *
+     * @param codMapaOrigem     O código do mapa a ser copiado.
+     * @param codUnidadeDestino O código da unidade de destino (não utilizado atualmente, reservado para futuro).
+     * @return O novo mapa criado com toda a estrutura duplicada.
+     * @throws ErroEntidadeNaoEncontrada se o mapa de origem não for encontrado.
+     */
     @Transactional
     public Mapa copiarMapaParaUnidade(Long codMapaOrigem, Long codUnidadeDestino) {
         Mapa fonte = repositorioMapa
                 .findById(codMapaOrigem)
                 .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Mapa", codMapaOrigem));
 
-        Mapa novoMapa = new Mapa()
+        Mapa novoMapa = criarNovoMapa(fonte);
+        Mapa mapaSalvo = repositorioMapa.save(novoMapa);
+
+        Map<Long, Atividade> mapaAtividades = copiarAtividades(fonte.getCodigo(), mapaSalvo);
+        copiarCompetencias(fonte.getCodigo(), mapaSalvo, mapaAtividades);
+
+        return mapaSalvo;
+    }
+
+    /**
+     * Importa atividades de um mapa de origem para um mapa de destino.
+     * Apenas atividades que ainda não existem no destino serão importadas.
+     *
+     * @param mapaOrigemId  O código do mapa de origem.
+     * @param mapaDestinoId O código do mapa de destino.
+     * @throws ErroEntidadeNaoEncontrada se o mapa de destino não for encontrado.
+     */
+    @Transactional
+    public void importarAtividadesDeOutroMapa(Long mapaOrigemId, Long mapaDestinoId) {
+        List<Atividade> atividadesOrigem = atividadeRepo.findByMapaCodigoWithConhecimentos(mapaOrigemId);
+        Set<String> descricoesExistentes = obterDescricoesExistentes(mapaDestinoId);
+
+        Mapa mapaDestino = repositorioMapa.findById(mapaDestinoId)
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Mapa", mapaDestinoId));
+
+        for (Atividade atividadeOrigem : atividadesOrigem) {
+            if (!descricoesExistentes.contains(atividadeOrigem.getDescricao())) {
+                copiarAtividadeComConhecimentos(atividadeOrigem, mapaDestino);
+            }
+        }
+    }
+
+    // ===================================================================================
+    // Métodos auxiliares de cópia
+    // ===================================================================================
+
+    private Mapa criarNovoMapa(Mapa fonte) {
+        return new Mapa()
                 .setDataHoraDisponibilizado(fonte.getDataHoraDisponibilizado())
                 .setObservacoesDisponibilizacao(fonte.getObservacoesDisponibilizacao())
                 .setDataHoraHomologado(null);
+    }
 
-        Mapa mapaSalvo = repositorioMapa.save(novoMapa);
+    private Map<Long, Atividade> copiarAtividades(Long codMapaFonte, Mapa mapaSalvo) {
+        Map<Long, Atividade> mapaAtividades = new HashMap<>();
 
-        Map<Long, Atividade> mapaDeAtividades = new HashMap<>();
-
-        List<Atividade> atividadesFonte = atividadeRepo.findByMapaCodigoWithConhecimentos(fonte.getCodigo());
-        if (atividadesFonte == null) {
-            atividadesFonte = Collections.emptyList();
-        }
+        List<Atividade> atividadesFonte = atividadeRepo.findByMapaCodigoWithConhecimentos(codMapaFonte);
+        if (atividadesFonte == null) atividadesFonte = List.of();
 
         for (Atividade atividadeFonte : atividadesFonte) {
-            Atividade novaAtividade = new Atividade();
-            novaAtividade.setDescricao(atividadeFonte.getDescricao());
-            novaAtividade.setMapa(mapaSalvo);
-            Atividade atividadeSalva = atividadeRepo.save(novaAtividade);
-            mapaDeAtividades.put(atividadeFonte.getCodigo(), atividadeSalva);
-
-            // Accessing the collection directly as it was pre-fetched
-            List<Conhecimento> conhecimentosFonte = atividadeFonte.getConhecimentos();
-            if (conhecimentosFonte != null && !conhecimentosFonte.isEmpty()) {
-                List<Conhecimento> novosConhecimentos = new ArrayList<>();
-                for (Conhecimento conhecimentoFonte : conhecimentosFonte) {
-                    Conhecimento novoConhecimento = new Conhecimento()
-                            .setAtividade(atividadeSalva)
-                            .setDescricao(conhecimentoFonte.getDescricao());
-
-                    atividadeSalva.getConhecimentos().add(novoConhecimento);
-                    novosConhecimentos.add(novoConhecimento);
-                }
-                conhecimentoRepo.saveAll(novosConhecimentos);
-            }
+            Atividade novaAtividade = copiarAtividadeComConhecimentos(atividadeFonte, mapaSalvo);
+            mapaAtividades.put(atividadeFonte.getCodigo(), novaAtividade);
         }
 
-        List<Competencia> competenciasFonte = competenciaRepo.findByMapaCodigo(fonte.getCodigo());
-        if (competenciasFonte != null && !competenciasFonte.isEmpty()) {
-            for (Competencia competenciaFonte : competenciasFonte) {
-                Competencia novaCompetencia = new Competencia()
-                        .setDescricao(competenciaFonte.getDescricao())
-                        .setMapa(mapaSalvo);
+        return mapaAtividades;
+    }
 
-                Set<Atividade> novasAtividadesAssociadas = new HashSet<>();
-                for (Atividade atividadeFonteAssociada : competenciaFonte.getAtividades()) {
-                    Atividade novaAtividade = mapaDeAtividades.get(atividadeFonteAssociada.getCodigo());
-                    if (novaAtividade != null) {
-                        novasAtividadesAssociadas.add(novaAtividade);
-                        novaAtividade.getCompetencias().add(novaCompetencia);
-                    }
-                }
-                novaCompetencia.setAtividades(novasAtividadesAssociadas);
+    private Atividade copiarAtividadeComConhecimentos(Atividade atividadeFonte, Mapa mapaDestino) {
+        Atividade novaAtividade = new Atividade();
+        novaAtividade.setDescricao(atividadeFonte.getDescricao());
+        novaAtividade.setMapa(mapaDestino);
+        Atividade atividadeSalva = atividadeRepo.save(novaAtividade);
 
-                competenciaRepo.save(novaCompetencia);
-            }
+        copiarConhecimentos(atividadeFonte, atividadeSalva);
+
+        return atividadeSalva;
+    }
+
+    private void copiarConhecimentos(Atividade atividadeFonte, Atividade atividadeSalva) {
+        List<Conhecimento> conhecimentosFonte = atividadeFonte.getConhecimentos();
+        if (conhecimentosFonte == null || conhecimentosFonte.isEmpty()) return;
+
+        List<Conhecimento> novosConhecimentos = new ArrayList<>();
+        for (Conhecimento conhecimentoFonte : conhecimentosFonte) {
+            Conhecimento novoConhecimento = new Conhecimento()
+                    .setAtividade(atividadeSalva)
+                    .setDescricao(conhecimentoFonte.getDescricao());
+
+            atividadeSalva.getConhecimentos().add(novoConhecimento);
+            novosConhecimentos.add(novoConhecimento);
         }
-        return mapaSalvo;
+        conhecimentoRepo.saveAll(novosConhecimentos);
+    }
+
+    private void copiarCompetencias(Long codMapaFonte, Mapa mapaSalvo, Map<Long, Atividade> mapaAtividades) {
+        List<Competencia> competenciasFonte = competenciaRepo.findByMapaCodigo(codMapaFonte);
+        if (competenciasFonte == null || competenciasFonte.isEmpty()) return;
+
+        for (Competencia competenciaFonte : competenciasFonte) {
+            Competencia novaCompetencia = new Competencia()
+                    .setDescricao(competenciaFonte.getDescricao())
+                    .setMapa(mapaSalvo);
+
+            Set<Atividade> novasAtividadesAssociadas = new HashSet<>();
+            for (Atividade atividadeFonteAssociada : competenciaFonte.getAtividades()) {
+                Atividade novaAtividade = mapaAtividades.get(atividadeFonteAssociada.getCodigo());
+                if (novaAtividade != null) {
+                    novasAtividadesAssociadas.add(novaAtividade);
+                    novaAtividade.getCompetencias().add(novaCompetencia);
+                }
+            }
+            novaCompetencia.setAtividades(novasAtividadesAssociadas);
+
+            competenciaRepo.save(novaCompetencia);
+        }
+    }
+
+    private Set<String> obterDescricoesExistentes(Long mapaDestinoId) {
+        return new HashSet<>(
+                atividadeRepo.findByMapaCodigo(mapaDestinoId).stream()
+                        .map(Atividade::getDescricao)
+                        .toList()
+        );
     }
 }
